--- a/form/views/templates.ejs
+++ b/form/views/templates.ejs
@@ -26,18 +26,18 @@
                 </h1>
             </div>
             <div style="float:right;">
-                <a class="active" href="/">Home</a>
+                <a href="/">Home</a>
                 <a href="/steps">Steps</a>
-                <a href="/templates">Templates</a>
+                <a class="active" href="/templates">Templates</a>
             </div>
         </div> <!--End of nav bar-->
 
         <br><br>
 
         <h2 style="width: 70%; margin: 0 auto;">
-            Easily create your own customisable forms with <a target="_blank" href="https://deta.sh">Deta Base</a>
+            Templates for creating your forms
         </h2>
-
+        
         <br><br>
     </div> <!--End of maincard div-->
     <br>
