--- a/form/views/index.ejs
+++ b/form/views/index.ejs
@@ -27,7 +27,7 @@
             </div>
             <div style="float:right;">
                 <a class="active" href="/">Home</a>
-                <a href="/steps">Steps</a>
+                <a href="/tutorial">Tutorial</a>
                 <a href="/templates">Templates</a>
             </div>
         </div> <!--End of nav bar-->
@@ -37,6 +37,28 @@
         <h2 style="width: 70%; margin: 0 auto;">
             Easily create your own customisable forms with <a target="_blank" href="https://deta.sh">Deta Base</a>
         </h2>
+
+        <br>
+        <h2 style="width: 70%; padding-left: 30px; margin: 0 auto; border-width: 0px 0em 0px 4px; border-color:rgb(104, 104, 104); border-style:solid;">
+            "Deta Base is a super easy to use production grade NoSQL database that supports complex queries and search"
+            <!-- <sup><span><a style="text-decoration: none;" target="_blank" href="https://deta.sh/">[1]</a></span></sup> -->
+        </h2>
+        <br>
+        <h2 style="width: 70%; margin: 0 auto;">
+            In short, you can use Deta Base and Micros to create and host your own forms, however you want it. Fork 
+            one of the templates and build on top of it or design your own form with custom HTML, CSS and JavaScript.
+        </h2>
+
+        <br>
+        <h2 style="width: 70%; margin: 0 auto;">
+            To know more about Deta join our 
+            <span>
+                <a target="_blank" href="https://join.slack.com/t/deta-hq/shared_invite/zt-ej8ygys5-1szO9l~y052Hg04FXdV1iA">
+                    Slack.</a>
+            </span> Feel free to ping us if you need any help.
+        </h2> 
+
+        
 
         <br><br>
     </div> <!--End of maincard div-->
