--- a/form/views/templates.ejs
+++ b/form/views/templates.ejs
@@ -27,16 +27,38 @@
             </div>
             <div style="float:right;">
                 <a href="/">Home</a>
-                <a href="/steps">Steps</a>
+                <a href="/tutorial">Tutorial</a>
                 <a class="active" href="/templates">Templates</a>
             </div>
         </div> <!--End of nav bar-->
 
         <br><br>
 
+        <h1 style="font-weight:600; color:#333; width: 70%; margin: 0 auto;">Some templates for creating your forms</h1>
+        
         <h2 style="width: 70%; margin: 0 auto;">
-            Templates for creating your forms
+            Want to feature a template you made? Open a PR at the <a target="_blank" href="https://github.com/fillerInk/deta-forms/pulls">GitHub repo</a>
         </h2>
+        <br>
+        <hr style="width:70%; color:rgb(121, 121, 121);">
+        <br>
+
+        <h1 style="font-weight:600; color:#333; width: 70%; margin: 0 auto;">
+            Simple
+        </h1>
+        <h2 style="width: 70%; margin: 0 auto;" >
+            <span>
+                <a target="_blank" href="/simple">Live Demo</a>
+            </span>
+          </h2>
+        <h2 style="width: 70%; margin: 0 auto;" >
+          <span>
+              <a target="_blank" href="/">Get the Code</a>
+          </span>
+        </h2>
+        <img src="assets/template1.png" style="width: 60%; height:auto; margin-left:13%">
+        <br>    
+
         
         <br><br>
     </div> <!--End of maincard div-->
