--- a/form/views/tutorial.ejs
+++ b/form/views/tutorial.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How to use?</title>
+    <title>How to make a custom form?</title>
     <link href='https://fonts.googleapis.com/css?family=Cairo' rel='stylesheet'>
     <link
     rel="stylesheet"
@@ -26,7 +26,7 @@
             </div>
             <div style="float:right;">
                 <a  href="/">Home</a>
-                <a class="active" href="/steps">Steps</a>
+                <a class="active" href="/tutorial">Tutorial</a>
                 <a href="/templates">Templates</a>
             </div>
             
@@ -79,10 +79,11 @@
 
         </ul>
         
-
+        <br>
         <br>
     </div>
     <br>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.5.0/prism.min.js"></script>
 
 </body>
