--- a/form/views/templates.ejs
+++ b/form/views/templates.ejs
@@ -53,7 +53,7 @@
           </h2>
         <h2 style="width: 70%; margin: 0 auto;" >
           <span>
-              <a target="_blank" href="/">Get the Code</a>
+              <a target="_blank" href="https://github.com/fillerInk/deta-forms/blob/master/form/views/simple.ejs">Get the Code</a>
           </span>
         </h2>
         <img src="assets/template1.png" style="width: 60%; height:auto; margin-left:13%">
