--- a/form/views/templates.ejs
+++ b/form/views/templates.ejs
@@ -56,7 +56,7 @@
               <a target="_blank" href="https://github.com/fillerInk/deta-forms/blob/master/form/views/simple.ejs">Get the Code</a>
           </span>
         </h2>
-        <img src="assets/template1.png" style="width: 60%; height:auto; margin-left:13%">
+        <img src="https://i.imgur.com/iaV5bNV.png" style="width: 60%; height:auto; margin-left:13%">
         <br>    
 
         
