--- a/form/views/simple.ejs
+++ b/form/views/simple.ejs
@@ -41,7 +41,7 @@
     </h3>
     <h3 style="margin-left: auto; margin-right:auto; margin-top:10px; width:fit-content;  background-color:rgb(251, 255, 0)" >
         <span>
-            <a href="/">
+            <a href="https://github.com/fillerInk/deta-forms/blob/master/form/views/simple.ejs">
                 Fork this template
             </a>
         </span>
