--- a/form/views/simple.ejs
+++ b/form/views/simple.ejs
@@ -13,22 +13,22 @@
     <div class="block fixed" style="width: 60%; margin: 0 auto;">
         <br>
         <h1 style="margin:auto; text-align:center;">Art Workshop</h1>
-        <form>
+        <form action="/write" method="post" onsubmit="alert('Data recieved at server!')">
             <h2 style="margin-left:10%"> Enter you details</h2>
             <label style="font-size:x-large; font-weight:400; margin-left:10%">Full Name</label><br>
-            <input type="text" style="font-size:large; width:300px; margin-left:10%" placeholder="Enter your name"><br>
+            <input name="name" id="name" type="text" style="font-size:large; width:300px; margin-left:10%" placeholder="Enter your name"><br>
             <label style="font-size:x-large; font-weight:400; margin-left:10%">Email</label><br>
-            <input type="text" style="font-size:large; width:300px;  margin-left:10%" placeholder="Enter your email address"><br>
+            <input name="email" id="email" type="text" style="font-size:large; width:300px;  margin-left:10%" placeholder="Enter your email address"><br>
             <label style="font-size:x-large; font-weight:400; margin-left:10%">Why do you want to attend this workshop</label><br>
-            <textarea type="text" style="font-size:larger; width:600px;  margin-left:10%" placeholder="What makes you interested in this topic?"></textarea><br>
+            <textarea name="answer" id="answer" type="text" style="font-size:larger; width:600px;  margin-left:10%" placeholder="What makes you interested in this topic?"></textarea><br>
             <label style="font-size:x-large; font-weight:400; margin-left:10%">Which topic will you be interested in?</label><br>
-            <select name="options" id="options" style="font-size:large; width: fit-content; margin-left:10%">
+            <select name="optionSelected" id="optionSelected" name="options" id="options" style="font-size:large; width: fit-content; margin-left:10%">
                 <option value="painting">Painting</option>
                 <option value="drawing">Drawing</option>
                 <option value="sketching">Sketching</option>
                 <option value="calligraphy">Calligraphy</option>
               </select><br><br>
-            <button class="outline" style="font-size:large; margin-left:45%; margin-right:50%; ">Submit</button>
+            <button class="outline" type="submit" style="font-size:large; margin-left:45%; margin-right:50%; ">Submit</button>
             <br><br>    
         </form>
     </div>
